# ml-saas

./: .gitignore  README.md  dev.py  pyproject.toml  render_build.py  render_start.py
apps/core/forms/: diabetes.py
apps/core/models/: model_ml.py
project/: settings.py  urls.py
seed/: seed_db.py
shared/templates/base/: bootstrap.html
