[project]
name = "ml-saas"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asgiref==3.11.0",
    "django==6.0.1",
    "django-bootstrap5==26.2",
    "gunicorn==25.1.0",
    "joblib==1.5.3",
    "numpy==2.4.2",
    "packaging==26.0",
    "scikit-learn==1.6.1",
    "scipy==1.17.0",
    "sqlparse==0.5.5",
    "threadpoolctl==3.6.0",
]
